# scheduly

./: .editorconfig  .gitignore  .mdformat.toml  LICENSE  README.md  pyproject.toml
.github/actions/bootstrap/: action.yml
.github/workflows/: ci.yml
dev/: fmt.sh  test.sh
docs/: asp_model.md  constraints.md  getting_started.md  inputs.md  model.md  scheduling_101.md
ime_usp_class_scheduler/: main.py  parser.py
ime_usp_class_scheduler/model/: __init__.py  data.py
ime_usp_class_scheduler/model/parser/: parser.py
ime_usp_class_scheduler/model/parsers/: required.py
ime_usp_class_scheduler/parser/: __init__.py  main.py  schedule_parser.py  workload_parser.py
inputs/: curricula.csv  curricula_components.csv  schedule.csv
src/asp/: aliases.lp  base.lp
src/asp/hard/: double.lp  minimum_spacing.lp  no_friday_afternoon.lp  no_obligatory_conflicts.lp  no_same_day.lp  no_split_double.lp
src/asp/soft/: avoid_all_conflicts.lp  bounded_spacing.lp  early_classes.lp  maximum_spacing.lp  no_curriculum_conflicts.lp  no_different_parts_of_day.lp  no_different_periods.lp  no_friday_afternoon.lp  science_and_statistics.lp  teacher_preferences.lp
src/config/inputs/: courses.csv  curricula.csv  curricula.csv.bkp  curricula_components.csv  curricula_components.csv.bkp  curriculum.csv  joint.csv  schedule.csv  schedules.csv  workload.csv  workloads.csv
src/config/inputs/2024-1/: schedules.csv  workload.csv  workload.csv.bkp
src/config/presets/: default.toml
src/py/ime_usp_class_scheduler/: configuration.py  console.py  constants.py  errors.py  interface.py  log.py  logging.py  main.py  model.py  parser.py  paths.py  program.py  prompt.py  solver.py  terminal.py  view.py
tests/: test_asp.py  test_parsers.py
tests/data/: test_courses.csv  test_curricula.csv  test_curricula_components.csv  test_joint.csv  test_workload.csv
tests/model/: test_input.py
(+11 files in other folders)
