[tool.poetry]
name = "ime-usp-class-scheduler"
version = "0.1.0"
description = ""
authors = ["Daniel Pessoa Cardeal <danielpessoa.cardeal@gmail.com>"]
readme = "README.md"
packages = [{include = "ime_usp_class_scheduler"}]

[tool.poetry.scripts]
scheduler = "ime_usp_class_scheduler.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
clingo = "^5.6.2"
click = "^8.1.3"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
